--- a/libft/Makefile
+++ b/libft/Makefile
@@ -11,8 +11,8 @@
 # **************************************************************************** #
 
 NAME = "libft.a"
-SRC = libft.h ft_toupper.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c ft_memcpy.c ft_memmove.c ft_memset.c ft_strlen.c
-DEPS = ft_toupper.c ft_bzero.o ft_isalnum.o ft_isalpha.o ft_isascii.o ft_isdigit.o ft_isprint.o ft_memcpy.o ft_memmove.o ft_memset.o ft_strlen.o
+SRC = libft.h ft_tolower.c ft_toupper.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c ft_memcpy.c ft_memmove.c ft_memset.c ft_strlen.c
+DEPS = ft_tolower.o ft_toupper.o ft_bzero.o ft_isalnum.o ft_isalpha.o ft_isascii.o ft_isdigit.o ft_isprint.o ft_memcpy.o ft_memmove.o ft_memset.o ft_strlen.o
 
 CC = "cc"
 CFLAGS = ""
