changed size_t in strncmp, strlcpy, strlcat, memcmp, bzero, memcpy, memmove, memset and memchr..... Neu strlcpy und strlcat..... makefile changed to find all files automaticly

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,27 +6,33 @@
 #    By: rbetz <rbetz@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/25 14:21:20 by rbetz             #+#    #+#              #
-#    Updated: 2022/03/25 18:00:44 by rbetz            ###   ########.fr        #
+#    Updated: 2022/03/29 15:47:25 by rbetz            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = "libft.a"
-SRC = libft.h ft_tolower.c ft_toupper.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c ft_memcpy.c ft_memmove.c ft_memset.c ft_strlen.c
-DEPS = ft_tolower.o ft_toupper.o ft_bzero.o ft_isalnum.o ft_isalpha.o ft_isascii.o ft_isdigit.o ft_isprint.o ft_memcpy.o ft_memmove.o ft_memset.o ft_strlen.o
+BON = ft_
 
 CC = "cc"
-CFLAGS = ""
+CFLAGS = -Wall -Wextra -Werror
 
 all: $(NAME)
 
-$(NAME): comp
-	ar -rcs $(NAME) $(DEPS)
-comp:
-	@$(CC) $(CFLAGS) -c $(SRC)
+$(NAME): ft_*.o
+	ar -rcs $(NAME) $^
+
+%.o: %.c
+	@$(CC) $(CFLAGS) -c ft_*.c libft.h
+
 clean: 
-	@/bin/rm -f $(DEPS)
+	@/bin/rm -f *.o
 
 fclean: clean
 	@/bin/rm -f $(NAME)
 
 re: fclean all
+
+_bonus: all
+	@$(CC) $(CFLAGS) -c $(BON) libft.h
+
+.PHONY: all comp $(NAME) clean fclean re _bonus
