--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "libft-unit-tests"]
 	path = libft-unit-tests
 	url = https://github.com/alelievr/libft-unit-test
+[submodule "libft-war-machine"]
+	path = libft-war-machine
+	url = git@github.com:y3ll0w42/libft-war-machine.git
+[submodule "libfttester"]
+	path = libfttester
+	url = git@github.com:Tripouille/libftTester.git
