changed makefile for bonus, fixed calloc, new lstnew

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,12 +6,13 @@
 #    By: rbetz <rbetz@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/25 14:21:20 by rbetz             #+#    #+#              #
-#    Updated: 2022/04/01 16:07:28 by rbetz            ###   ########.fr        #
+#    Updated: 2022/04/10 18:47:15 by rbetz            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = "libft.a"
-BON = ft_
+SRC = ft_t*.c ft_s*.c ft_p*.c ft_m*.c ft_i*.c ft_c*.c ft_b*.c ft_a*.c
+BON = ft_l*.c
 
 CC = "cc"
 CFLAGS = -Wall -Wextra -Werror
@@ -22,7 +23,7 @@ $(NAME): ft_*.o
 	ar -rcs $(NAME) $^
 
 %.o: %.c
-	@$(CC) $(CFLAGS) -c ft_*.c libft.h
+	$(CC) $(CFLAGS) -c $(SRC) libft.h
 
 clean: 
 	@/bin/rm -f *.o *.gch
@@ -32,7 +33,10 @@ fclean: clean
 
 re: fclean all
 
-_bonus: all
+bon:
 	@$(CC) $(CFLAGS) -c $(BON) libft.h
 
-.PHONY: all comp $(NAME) clean fclean re _bonus
+bonus: bon all
+
+
+.PHONY: all comp $(NAME) clean fclean re bonus bon
